--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -16,9 +17,14 @@
     <script type="text/babel">
 
         function App() {
+
+                const [numero, setNumero] = React.useState(0);
+
             return (
                 <f>
-                    <h1>Hello, World!</h1>
+                    <button onClick={() => setNumero(numero + 1)}>+</button>
+                    <h1 className="roxo">{numero}</h1>
+                    <button onClick={() => setNumero(numero - 1)}>-</button>
                 </f>
             );
         }
