--- a/ex1/index.html
+++ b/ex1/index.html
@@ -22,20 +22,18 @@
 
             const diminuir = () => {
                 setNumero((atual) => atual - 1);
-                setNumero((atual) => atual - 1);
             }
 
             const aumentar = () => {
                 setNumero((atual) => atual + 1);
-                setNumero((atual) => atual + 1);
             }
 
             return (
-                <f>
-                    <button onClick={() => aumentar}>+</button>
+                <div>
+                    <button onClick={() => aumentar()}>+</button>
                     <h1 className="roxo">{numero}</h1>
-                    <button onClick={() => diminuir}>-</button>
-                </f>
+                    <button onClick={() => diminuir()}>-</button>
+                </div>
             );
         }
 
